# exercise-helper

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: compile.yml
exercises/: Cargo.toml
exercises/src/: lib.rs
exercises/src/sheet1/: ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex09.rs  ex10.rs  mod.rs
exercises/src/sheet2/: ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex10.rs
exercises/src/sheet3/: ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs
exercises/src/sheet6/: ex01.rs  mod.rs
src/: main.rs  stateless_cli.rs
