[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
orchestrator = {git="https://github.com/Usioumeo/Testalo", default-features = false}
rust-default = {git="https://github.com/Usioumeo/Testalo", default-features = false}
tokio = "1.41"
clap = { version = "4.5", features = ["derive"] }
#include_dir = "0.7"
colored = "2.1"
#rand="0.8"
zip="2.2"

[build-dependencies]
zip="2.2"
walkdir = "2"

[profile.release]
strip= true
opt-level = 'z'
lto = true
codegen-units = 1